--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -37,24 +37,44 @@
         </div>
       </div>
 
-      <div id="analogyObjects" class="span10">
-        <div id="instructionText" class="row">
-          The <span class="analogyDimension"></span> of <span class="orange" id="analogyleftObjectName1"></span> is to the <span class="analogyDimension"></span> of <span class="maroon" id="analogyrightObjectName1"></span> 
-          <br/> as 
-          the <span class="analogyDimension"></span> of <span id="analogyleftObjectName2"></span> is to 
-          the <span class="analogyDimension"></span> of <span id="analogyrightObjectName2"></span>.
-          <br/><br/><br/>
+      <div id="analogyObjects" class="span12">
+        <div id="instructionText"  class="row"><p>
+          The <span class="analogyDimension"></span> of <span class="orange" id="analogyleftObjectName1">
+             </span><span class="orange" id="analogyleftObjectValue1"></span>
+          is to the <span class="analogyDimension"></span> of <span class="maroon" id="analogyrightObjectName1"></span>
+              <span class="maroon" id="analogyrightObjectValue1"></span></span> 
+          <span class="right" id="analogyRatio1"></span>
+          <br/><br/><br/>  </p>
         </div>
         <div class="row">
-          <div class="span5">
-            <div id="analogyleftObject" class="left">
-            </div>
+         <div id="analogyOriginalObjects" class="row">
+          <div class="span6"> <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            as the <span class="analogyDimension"></span> of <span class="orange" id="analogyleftObjectName2"></span> is </p>
+            <div id="analogyleftObject" class="hidden" class="left"></div>
+            <div id="analogySecondObjectsLeft" class="left"></div>
           </div>
           
-          <div class="span5">
-            <div id="analogyrightObject" class="left">
-            </div>
+          <div class="span6"> <p>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+            to the <span class="analogyDimension"></span> of <span class="maroon" id="analogyrightObjectName2"></span>. 
+            <span class="right" id="analogyRatio2"></span>
+            </p>
+            <div id="analogyrightObject" class="hidden" class="right"></div>
+            <div id="analogySecondObjectsRight" class="right"></div>
           </div>
+        </div>
+        
+        <div id="analogySecondObjects" class="span10">
+          <div>
+            <div id="analogyAnimateleftObject" class="objectAnimation left"></div>
+            <div id="analogyAnimaterightObject" class="objectAnimation right"></div>
+          </div>
+
+            
+
+            
+        </div>
         </div>
       </div>
 
