--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
           <div id="list1" class="listContainer">
             <% @itemsDict.each do |person, objs| %>
               <dl>
-                <dt><%= person.firstName %></dt>
+                <dt><%= person %></dt>
                 <% objs.each do |item| %>
                   <dd><p><%= item.name %></p>
                   <img class="iosListImage" attrvolume="<%= item.volume %>" attrarea="<%= item.area %>" attrheight="<%= item.height %>" attrwidth="<%= item.width %>" attrlength="<%= item.length %>" attrdiameter="<%= item.diameter %>" attrsurface_area="<%= item.surface_area %>" attrarticle="<%= item.article %>" attrname="<%= item.name %>" src="<%= item.filename %>"></dd>
