--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 	<title>Astronomical Proportions</title>
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 	<%= stylesheet_link_tag "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= requirejs_include_tag "main" %>
   <%= csrf_meta_tags %>
+  <%= include_gon %>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -74,51 +75,17 @@
         </div>
       <% end %>
     </div>
+
 	    <div class="row-fluid">
 		  <!-- left sidebar -->
-        <% if params[:controller] != "items"  %>
-  	     	<div class="span2">
-
-            <ul class="nav nav-list" id="dimension-list" data-spy="affix">
-              <li class="dimensionSelector active" id="li-diameter"><a href="#diameter">Diameter</a></li>
-              <li class="dimensionSelector" id="li-surface_area"><a href="#surface_area">Surface Area</a></li>
-              <li class="dimensionSelector" id="li-length"><a href="#length">Length</a></li>
-              <li class="dimensionSelector" id="li-width"><a href="#width">Width</a></li>
-              <li class="dimensionSelector" id="li-height"><a href="#height">Height</a></li>
-              <li class="dimensionSelector" id="li-area"><a href="#area">Area</a></li>
-              <li class="dimensionSelector" id="li-volume"><a href="#volume">Volume</a></li>
-            </ul>
-            <hr />
-            <ul class="nav nav-list" id="selector-list" data-spy="affix">
-              <li class="modeSelector active" id="li-compare"><a href="#"><i class="icon-zoom-in"></i>Compare Mode</a></li>
-              <li class="modeSelector" id="li-analogy"><a href="#"><i class="icon-question-sign"></i>Analogy Mode</a></li>
-              <li class="modeSelector" id="li-prediction"><a href="#"><i class="icon-resize-vertical"></i>Prediction Mode</a></li>
-            </ul>
-          </div>
-
-          <div class="span8">
-          	<%= yield %>
-          </div>
-        <% else %>
-          <div class="span10">
-            <%= yield %>
-          </div>
-        <% end %>
-        <div class="span2">
-          <ul class="nav nav-list" id="admin-list" data-spy="affix">
-            <% if params[:controller] == "items"  %>
-              <li class="admin"><a href="/"><i class="icon-home"></i> Back to Home</a></li>
-            <% end %>
-            <li class="admin"><a href="/items"> <i class="icon-th"></i> Data Table</a></li>
-            <li class="admin"><a href="/items/new"><i class="icon-plus-sign"></i> Add New Item</a></li>
-          </ul>
-        </div>
+  	     	<div id="leftColumn" class="span2"></div>
+          <div id="centerColumn" class="span8"> <%= yield %> </div>
+          <div id="rightColumn" class="span2"></div>
 	    </div>
 		
 	</div>
 
-  <footer>
-   <p>&nbsp;&nbsp;&nbsp;&copy; Virginia Tech - Center for Human-Computer Interaction 2012</p>
-  </footer>
+<div id="footer"></div>
+
 </body>
 </html>
