--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,7 +100,7 @@
           	<%= yield %>
           </div>
         <% else %>
-          <div class="span10">
+          <div id="centerColumn" class="span10">
             <%= yield %>
           </div>
         <% end %>
