--- a/app/assets/stylesheets/screen.css
+++ b/app/assets/stylesheets/screen.css
@@ -26,7 +26,7 @@ ul#selectDimension {
 	margin: 0 ! important;
 	margin-top:	40px;
 	border: 1px solid black;
-	width: 330px ! important; /*430*/
+	width: 320px ! important; /*430*/
 	height:	550px ! important;
 }
 
@@ -56,7 +56,7 @@ dd.selectedObject:hover {
 }
 
 .fakeHeader, dt {
-	width: 302px ! important;
+	width: 292px ! important;
 }
 
 /*.hidden {
@@ -119,4 +119,13 @@ dd.selectedObject:hover {
 
 .correct {
 
+}
+
+#centerColumn {
+	overflow-x: auto;
+}
+
+.itemTable {
+	border-collapse: separate;
+	border-spacing: 18px!important;
 }
